Post-build script to copy DLL out works.

--- a/Reassembly Custom AI 0/Reassembly Custom AI 0.vcxproj
+++ b/Reassembly Custom AI 0/Reassembly Custom AI 0.vcxproj
@@ -156,6 +156,10 @@
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>OpenGL32.lib;Glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Message>Copy mod files to their target for Reassembly to read.</Message>
+      <Command>$(SolutionDir)post-build.bat</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
