Add ATargetBase type; two Reassembly headers.
- SerialBlock.h and Shapes.h pulled in in their entirety to make things
  simpler.  Will probably be needed mostly or entirely in the future
  anyway.
- ATargetBase one down from AIAction.  Base type for many Reassembly
  targeting actions.

--- a/Reassembly Custom AI 0/Reassembly Custom AI 0.vcxproj
+++ b/Reassembly Custom AI 0/Reassembly Custom AI 0.vcxproj
@@ -187,6 +187,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\game\AI_modapi.h" />
+    <ClInclude Include="..\game\SerialBlock.h" />
+    <ClInclude Include="..\game\Shapes.h" />
     <ClInclude Include="..\glm\common.hpp" />
     <ClInclude Include="..\glm\exponential.hpp" />
     <ClInclude Include="..\glm\ext.hpp" />
