--- a/Reassembly Custom AI 0/Reassembly Custom AI 0.vcxproj
+++ b/Reassembly Custom AI 0/Reassembly Custom AI 0.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{CCA56D2E-6432-4DDD-BED2-A46407D03EA1}</ProjectGuid>
     <RootNamespace>ReassemblyCustomAI0</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <ProjectName>gungine_ai</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -158,7 +159,7 @@
     </Link>
     <PostBuildEvent>
       <Message>Copy mod files to their target for Reassembly to read.</Message>
-      <Command>$(SolutionDir)post-build.bat</Command>
+      <Command>"$(SolutionDir)post-build.bat"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -184,6 +185,10 @@
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>OpenGL32.lib;Glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>"$(SolutionDir)post-build.bat"</Command>
+      <Message>Copy mod files to their target for Reassembly to read.</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\game\AI_modapi.h" />
