SolutionName is mod name, Project names are DLLs.
- post-build.bat shouldn't need human editing now.  Takes a single arg,
  the mod's name, which is assumed to be the Solution's name.
- Each project will be one usable AI DLL.

--- a/Reassembly Custom AI 0/Reassembly Custom AI 0.vcxproj
+++ b/Reassembly Custom AI 0/Reassembly Custom AI 0.vcxproj
@@ -159,7 +159,7 @@
     </Link>
     <PostBuildEvent>
       <Message>Copy mod files to their target for Reassembly to read.</Message>
-      <Command>"$(SolutionDir)post-build.bat"</Command>
+      <Command>"$(SolutionDir)post-build.bat" "$(SolutionName)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -186,7 +186,7 @@
       <AdditionalDependencies>OpenGL32.lib;Glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>"$(SolutionDir)post-build.bat"</Command>
+      <Command>"$(SolutionDir)post-build.bat" "$(SolutionName)"</Command>
       <Message>Copy mod files to their target for Reassembly to read.</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
