--- a/Reassembly Custom AI 0/Reassembly Custom AI 0.vcxproj
+++ b/Reassembly Custom AI 0/Reassembly Custom AI 0.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{CCA56D2E-6432-4DDD-BED2-A46407D03EA1}</ProjectGuid>
     <RootNamespace>ReassemblyCustomAI0</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
-    <ProjectName>gungine_ai</ProjectName>
+    <ProjectName>saiyan</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
