Copy all Reassembly game/ headers over.

--- a/Reassembly Custom AI 0/Reassembly Custom AI 0.vcxproj
+++ b/Reassembly Custom AI 0/Reassembly Custom AI 0.vcxproj
@@ -191,9 +191,57 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\game\Agent.h" />
+    <ClInclude Include="..\game\AI.h" />
     <ClInclude Include="..\game\AI_modapi.h" />
+    <ClInclude Include="..\game\BindingInterface.h" />
+    <ClInclude Include="..\game\BlockPattern.h" />
+    <ClInclude Include="..\game\Blocks.h" />
+    <ClInclude Include="..\game\BlockTool.h" />
+    <ClInclude Include="..\game\ClusterWindow.h" />
+    <ClInclude Include="..\game\Colors.h" />
+    <ClInclude Include="..\game\Constructor.h" />
+    <ClInclude Include="..\game\ConstructSelector.h" />
+    <ClInclude Include="..\game\ControlPanel.h" />
+    <ClInclude Include="..\game\Digressions.h" />
+    <ClInclude Include="..\game\Editor.h" />
+    <ClInclude Include="..\game\Export.h" />
+    <ClInclude Include="..\game\FlyCam.h" />
+    <ClInclude Include="..\game\Font.h" />
+    <ClInclude Include="..\game\Galaxy.h" />
+    <ClInclude Include="..\game\Game.h" />
+    <ClInclude Include="..\game\GameZone.h" />
+    <ClInclude Include="..\game\Interface.h" />
+    <ClInclude Include="..\game\Keys.h" />
+    <ClInclude Include="..\game\KickstarterNames.h" />
+    <ClInclude Include="..\game\Levels.h" />
+    <ClInclude Include="..\game\MapObjective.h" />
+    <ClInclude Include="..\game\Message.h" />
+    <ClInclude Include="..\game\Mods.h" />
+    <ClInclude Include="..\game\Network.h" />
+    <ClInclude Include="..\game\Notification.h" />
+    <ClInclude Include="..\game\Options.h" />
+    <ClInclude Include="..\game\ParticleEffects.h" />
+    <ClInclude Include="..\game\Player.h" />
+    <ClInclude Include="..\game\PortPair.h" />
+    <ClInclude Include="..\game\Render.h" />
+    <ClInclude Include="..\game\Resources.h" />
+    <ClInclude Include="..\game\Save.h" />
+    <ClInclude Include="..\game\Sector.h" />
+    <ClInclude Include="..\game\Selection.h" />
     <ClInclude Include="..\game\SerialBlock.h" />
     <ClInclude Include="..\game\Shapes.h" />
+    <ClInclude Include="..\game\Ships.h" />
+    <ClInclude Include="..\game\Sound.h" />
+    <ClInclude Include="..\game\Spacer.h" />
+    <ClInclude Include="..\game\StagingTournament.h" />
+    <ClInclude Include="..\game\StationInterface.h" />
+    <ClInclude Include="..\game\StdAfx.h" />
+    <ClInclude Include="..\game\TabMenu.h" />
+    <ClInclude Include="..\game\TheBlocks.h" />
+    <ClInclude Include="..\game\Tournament.h" />
+    <ClInclude Include="..\game\Types.h" />
+    <ClInclude Include="..\game\Weapon.h" />
     <ClInclude Include="..\glm\common.hpp" />
     <ClInclude Include="..\glm\exponential.hpp" />
     <ClInclude Include="..\glm\ext.hpp" />
