--- a/Reassembly Custom AI 0/Reassembly Custom AI 0.vcxproj
+++ b/Reassembly Custom AI 0/Reassembly Custom AI 0.vcxproj
@@ -290,11 +290,130 @@
     <ClInclude Include="..\game\Types.h" />
     <ClInclude Include="..\game\Weapon.h" />
     <ClInclude Include="..\glm\common.hpp" />
+    <ClInclude Include="..\glm\detail\func_common.hpp" />
+    <ClInclude Include="..\glm\detail\func_exponential.hpp" />
+    <ClInclude Include="..\glm\detail\func_geometric.hpp" />
+    <ClInclude Include="..\glm\detail\func_integer.hpp" />
+    <ClInclude Include="..\glm\detail\func_matrix.hpp" />
+    <ClInclude Include="..\glm\detail\func_noise.hpp" />
+    <ClInclude Include="..\glm\detail\func_packing.hpp" />
+    <ClInclude Include="..\glm\detail\func_trigonometric.hpp" />
+    <ClInclude Include="..\glm\detail\func_vector_relational.hpp" />
+    <ClInclude Include="..\glm\detail\intrinsic_common.hpp" />
+    <ClInclude Include="..\glm\detail\intrinsic_exponential.hpp" />
+    <ClInclude Include="..\glm\detail\intrinsic_geometric.hpp" />
+    <ClInclude Include="..\glm\detail\intrinsic_integer.hpp" />
+    <ClInclude Include="..\glm\detail\intrinsic_matrix.hpp" />
+    <ClInclude Include="..\glm\detail\intrinsic_trigonometric.hpp" />
+    <ClInclude Include="..\glm\detail\intrinsic_vector_relational.hpp" />
+    <ClInclude Include="..\glm\detail\precision.hpp" />
+    <ClInclude Include="..\glm\detail\setup.hpp" />
+    <ClInclude Include="..\glm\detail\type_float.hpp" />
+    <ClInclude Include="..\glm\detail\type_gentype.hpp" />
+    <ClInclude Include="..\glm\detail\type_half.hpp" />
+    <ClInclude Include="..\glm\detail\type_int.hpp" />
+    <ClInclude Include="..\glm\detail\type_mat.hpp" />
+    <ClInclude Include="..\glm\detail\type_mat2x2.hpp" />
+    <ClInclude Include="..\glm\detail\type_mat2x3.hpp" />
+    <ClInclude Include="..\glm\detail\type_mat2x4.hpp" />
+    <ClInclude Include="..\glm\detail\type_mat3x2.hpp" />
+    <ClInclude Include="..\glm\detail\type_mat3x3.hpp" />
+    <ClInclude Include="..\glm\detail\type_mat3x4.hpp" />
+    <ClInclude Include="..\glm\detail\type_mat4x2.hpp" />
+    <ClInclude Include="..\glm\detail\type_mat4x3.hpp" />
+    <ClInclude Include="..\glm\detail\type_mat4x4.hpp" />
+    <ClInclude Include="..\glm\detail\type_vec.hpp" />
+    <ClInclude Include="..\glm\detail\type_vec1.hpp" />
+    <ClInclude Include="..\glm\detail\type_vec2.hpp" />
+    <ClInclude Include="..\glm\detail\type_vec3.hpp" />
+    <ClInclude Include="..\glm\detail\type_vec4.hpp" />
+    <ClInclude Include="..\glm\detail\_features.hpp" />
+    <ClInclude Include="..\glm\detail\_fixes.hpp" />
+    <ClInclude Include="..\glm\detail\_noise.hpp" />
+    <ClInclude Include="..\glm\detail\_swizzle.hpp" />
+    <ClInclude Include="..\glm\detail\_swizzle_func.hpp" />
+    <ClInclude Include="..\glm\detail\_vectorize.hpp" />
     <ClInclude Include="..\glm\exponential.hpp" />
     <ClInclude Include="..\glm\ext.hpp" />
     <ClInclude Include="..\glm\fwd.hpp" />
     <ClInclude Include="..\glm\geometric.hpp" />
     <ClInclude Include="..\glm\glm.hpp" />
+    <ClInclude Include="..\glm\gtc\bitfield.hpp" />
+    <ClInclude Include="..\glm\gtc\color_space.hpp" />
+    <ClInclude Include="..\glm\gtc\constants.hpp" />
+    <ClInclude Include="..\glm\gtc\epsilon.hpp" />
+    <ClInclude Include="..\glm\gtc\integer.hpp" />
+    <ClInclude Include="..\glm\gtc\matrix_access.hpp" />
+    <ClInclude Include="..\glm\gtc\matrix_integer.hpp" />
+    <ClInclude Include="..\glm\gtc\matrix_inverse.hpp" />
+    <ClInclude Include="..\glm\gtc\matrix_transform.hpp" />
+    <ClInclude Include="..\glm\gtc\noise.hpp" />
+    <ClInclude Include="..\glm\gtc\packing.hpp" />
+    <ClInclude Include="..\glm\gtc\quaternion.hpp" />
+    <ClInclude Include="..\glm\gtc\random.hpp" />
+    <ClInclude Include="..\glm\gtc\reciprocal.hpp" />
+    <ClInclude Include="..\glm\gtc\round.hpp" />
+    <ClInclude Include="..\glm\gtc\type_precision.hpp" />
+    <ClInclude Include="..\glm\gtc\type_ptr.hpp" />
+    <ClInclude Include="..\glm\gtc\ulp.hpp" />
+    <ClInclude Include="..\glm\gtc\vec1.hpp" />
+    <ClInclude Include="..\glm\gtx\associated_min_max.hpp" />
+    <ClInclude Include="..\glm\gtx\bit.hpp" />
+    <ClInclude Include="..\glm\gtx\closest_point.hpp" />
+    <ClInclude Include="..\glm\gtx\color_space.hpp" />
+    <ClInclude Include="..\glm\gtx\color_space_YCoCg.hpp" />
+    <ClInclude Include="..\glm\gtx\common.hpp" />
+    <ClInclude Include="..\glm\gtx\compatibility.hpp" />
+    <ClInclude Include="..\glm\gtx\component_wise.hpp" />
+    <ClInclude Include="..\glm\gtx\dual_quaternion.hpp" />
+    <ClInclude Include="..\glm\gtx\euler_angles.hpp" />
+    <ClInclude Include="..\glm\gtx\extend.hpp" />
+    <ClInclude Include="..\glm\gtx\extented_min_max.hpp" />
+    <ClInclude Include="..\glm\gtx\fast_exponential.hpp" />
+    <ClInclude Include="..\glm\gtx\fast_square_root.hpp" />
+    <ClInclude Include="..\glm\gtx\fast_trigonometry.hpp" />
+    <ClInclude Include="..\glm\gtx\gradient_paint.hpp" />
+    <ClInclude Include="..\glm\gtx\handed_coordinate_space.hpp" />
+    <ClInclude Include="..\glm\gtx\hash.hpp" />
+    <ClInclude Include="..\glm\gtx\integer.hpp" />
+    <ClInclude Include="..\glm\gtx\intersect.hpp" />
+    <ClInclude Include="..\glm\gtx\io.hpp" />
+    <ClInclude Include="..\glm\gtx\log_base.hpp" />
+    <ClInclude Include="..\glm\gtx\matrix_cross_product.hpp" />
+    <ClInclude Include="..\glm\gtx\matrix_decompose.hpp" />
+    <ClInclude Include="..\glm\gtx\matrix_interpolation.hpp" />
+    <ClInclude Include="..\glm\gtx\matrix_major_storage.hpp" />
+    <ClInclude Include="..\glm\gtx\matrix_operation.hpp" />
+    <ClInclude Include="..\glm\gtx\matrix_query.hpp" />
+    <ClInclude Include="..\glm\gtx\matrix_transform_2d.hpp" />
+    <ClInclude Include="..\glm\gtx\mixed_product.hpp" />
+    <ClInclude Include="..\glm\gtx\norm.hpp" />
+    <ClInclude Include="..\glm\gtx\normal.hpp" />
+    <ClInclude Include="..\glm\gtx\normalize_dot.hpp" />
+    <ClInclude Include="..\glm\gtx\number_precision.hpp" />
+    <ClInclude Include="..\glm\gtx\optimum_pow.hpp" />
+    <ClInclude Include="..\glm\gtx\orthonormalize.hpp" />
+    <ClInclude Include="..\glm\gtx\perpendicular.hpp" />
+    <ClInclude Include="..\glm\gtx\polar_coordinates.hpp" />
+    <ClInclude Include="..\glm\gtx\projection.hpp" />
+    <ClInclude Include="..\glm\gtx\quaternion.hpp" />
+    <ClInclude Include="..\glm\gtx\range.hpp" />
+    <ClInclude Include="..\glm\gtx\raw_data.hpp" />
+    <ClInclude Include="..\glm\gtx\rotate_normalized_axis.hpp" />
+    <ClInclude Include="..\glm\gtx\rotate_vector.hpp" />
+    <ClInclude Include="..\glm\gtx\scalar_relational.hpp" />
+    <ClInclude Include="..\glm\gtx\simd_mat4.hpp" />
+    <ClInclude Include="..\glm\gtx\simd_quat.hpp" />
+    <ClInclude Include="..\glm\gtx\simd_vec4.hpp" />
+    <ClInclude Include="..\glm\gtx\spline.hpp" />
+    <ClInclude Include="..\glm\gtx\std_based_type.hpp" />
+    <ClInclude Include="..\glm\gtx\string_cast.hpp" />
+    <ClInclude Include="..\glm\gtx\transform.hpp" />
+    <ClInclude Include="..\glm\gtx\transform2.hpp" />
+    <ClInclude Include="..\glm\gtx\type_aligned.hpp" />
+    <ClInclude Include="..\glm\gtx\vector_angle.hpp" />
+    <ClInclude Include="..\glm\gtx\vector_query.hpp" />
+    <ClInclude Include="..\glm\gtx\wrap.hpp" />
     <ClInclude Include="..\glm\integer.hpp" />
     <ClInclude Include="..\glm\mat2x2.hpp" />
     <ClInclude Include="..\glm\mat2x3.hpp" />
@@ -326,6 +445,115 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\glm\detail\func_common.inl" />
+    <None Include="..\glm\detail\func_exponential.inl" />
+    <None Include="..\glm\detail\func_geometric.inl" />
+    <None Include="..\glm\detail\func_integer.inl" />
+    <None Include="..\glm\detail\func_matrix.inl" />
+    <None Include="..\glm\detail\func_noise.inl" />
+    <None Include="..\glm\detail\func_packing.inl" />
+    <None Include="..\glm\detail\func_trigonometric.inl" />
+    <None Include="..\glm\detail\func_vector_relational.inl" />
+    <None Include="..\glm\detail\intrinsic_common.inl" />
+    <None Include="..\glm\detail\intrinsic_exponential.inl" />
+    <None Include="..\glm\detail\intrinsic_geometric.inl" />
+    <None Include="..\glm\detail\intrinsic_integer.inl" />
+    <None Include="..\glm\detail\intrinsic_matrix.inl" />
+    <None Include="..\glm\detail\intrinsic_trigonometric.inl" />
+    <None Include="..\glm\detail\intrinsic_vector_relational.inl" />
+    <None Include="..\glm\detail\type_gentype.inl" />
+    <None Include="..\glm\detail\type_half.inl" />
+    <None Include="..\glm\detail\type_mat.inl" />
+    <None Include="..\glm\detail\type_mat2x2.inl" />
+    <None Include="..\glm\detail\type_mat2x3.inl" />
+    <None Include="..\glm\detail\type_mat2x4.inl" />
+    <None Include="..\glm\detail\type_mat3x2.inl" />
+    <None Include="..\glm\detail\type_mat3x3.inl" />
+    <None Include="..\glm\detail\type_mat3x4.inl" />
+    <None Include="..\glm\detail\type_mat4x2.inl" />
+    <None Include="..\glm\detail\type_mat4x3.inl" />
+    <None Include="..\glm\detail\type_mat4x4.inl" />
+    <None Include="..\glm\detail\type_vec.inl" />
+    <None Include="..\glm\detail\type_vec1.inl" />
+    <None Include="..\glm\detail\type_vec2.inl" />
+    <None Include="..\glm\detail\type_vec3.inl" />
+    <None Include="..\glm\detail\type_vec4.inl" />
+    <None Include="..\glm\gtc\bitfield.inl" />
+    <None Include="..\glm\gtc\color_space.inl" />
+    <None Include="..\glm\gtc\constants.inl" />
+    <None Include="..\glm\gtc\epsilon.inl" />
+    <None Include="..\glm\gtc\integer.inl" />
+    <None Include="..\glm\gtc\matrix_access.inl" />
+    <None Include="..\glm\gtc\matrix_inverse.inl" />
+    <None Include="..\glm\gtc\matrix_transform.inl" />
+    <None Include="..\glm\gtc\noise.inl" />
+    <None Include="..\glm\gtc\packing.inl" />
+    <None Include="..\glm\gtc\quaternion.inl" />
+    <None Include="..\glm\gtc\random.inl" />
+    <None Include="..\glm\gtc\reciprocal.inl" />
+    <None Include="..\glm\gtc\round.inl" />
+    <None Include="..\glm\gtc\type_precision.inl" />
+    <None Include="..\glm\gtc\type_ptr.inl" />
+    <None Include="..\glm\gtc\ulp.inl" />
+    <None Include="..\glm\gtc\vec1.inl" />
+    <None Include="..\glm\gtx\associated_min_max.inl" />
+    <None Include="..\glm\gtx\bit.inl" />
+    <None Include="..\glm\gtx\closest_point.inl" />
+    <None Include="..\glm\gtx\color_space.inl" />
+    <None Include="..\glm\gtx\color_space_YCoCg.inl" />
+    <None Include="..\glm\gtx\common.inl" />
+    <None Include="..\glm\gtx\compatibility.inl" />
+    <None Include="..\glm\gtx\component_wise.inl" />
+    <None Include="..\glm\gtx\dual_quaternion.inl" />
+    <None Include="..\glm\gtx\euler_angles.inl" />
+    <None Include="..\glm\gtx\extend.inl" />
+    <None Include="..\glm\gtx\extented_min_max.inl" />
+    <None Include="..\glm\gtx\fast_exponential.inl" />
+    <None Include="..\glm\gtx\fast_square_root.inl" />
+    <None Include="..\glm\gtx\fast_trigonometry.inl" />
+    <None Include="..\glm\gtx\gradient_paint.inl" />
+    <None Include="..\glm\gtx\handed_coordinate_space.inl" />
+    <None Include="..\glm\gtx\hash.inl" />
+    <None Include="..\glm\gtx\integer.inl" />
+    <None Include="..\glm\gtx\intersect.inl" />
+    <None Include="..\glm\gtx\io.inl" />
+    <None Include="..\glm\gtx\log_base.inl" />
+    <None Include="..\glm\gtx\matrix_cross_product.inl" />
+    <None Include="..\glm\gtx\matrix_decompose.inl" />
+    <None Include="..\glm\gtx\matrix_interpolation.inl" />
+    <None Include="..\glm\gtx\matrix_major_storage.inl" />
+    <None Include="..\glm\gtx\matrix_operation.inl" />
+    <None Include="..\glm\gtx\matrix_query.inl" />
+    <None Include="..\glm\gtx\matrix_transform_2d.inl" />
+    <None Include="..\glm\gtx\mixed_product.inl" />
+    <None Include="..\glm\gtx\norm.inl" />
+    <None Include="..\glm\gtx\normal.inl" />
+    <None Include="..\glm\gtx\normalize_dot.inl" />
+    <None Include="..\glm\gtx\number_precision.inl" />
+    <None Include="..\glm\gtx\optimum_pow.inl" />
+    <None Include="..\glm\gtx\orthonormalize.inl" />
+    <None Include="..\glm\gtx\perpendicular.inl" />
+    <None Include="..\glm\gtx\polar_coordinates.inl" />
+    <None Include="..\glm\gtx\projection.inl" />
+    <None Include="..\glm\gtx\quaternion.inl" />
+    <None Include="..\glm\gtx\raw_data.inl" />
+    <None Include="..\glm\gtx\rotate_normalized_axis.inl" />
+    <None Include="..\glm\gtx\rotate_vector.inl" />
+    <None Include="..\glm\gtx\scalar_relational.inl" />
+    <None Include="..\glm\gtx\simd_mat4.inl" />
+    <None Include="..\glm\gtx\simd_quat.inl" />
+    <None Include="..\glm\gtx\simd_vec4.inl" />
+    <None Include="..\glm\gtx\spline.inl" />
+    <None Include="..\glm\gtx\std_based_type.inl" />
+    <None Include="..\glm\gtx\string_cast.inl" />
+    <None Include="..\glm\gtx\transform.inl" />
+    <None Include="..\glm\gtx\transform2.inl" />
+    <None Include="..\glm\gtx\type_aligned.inl" />
+    <None Include="..\glm\gtx\vector_angle.inl" />
+    <None Include="..\glm\gtx\vector_query.inl" />
+    <None Include="..\glm\gtx\wrap.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
